Portuguese translation updated to 951t

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,7 @@ dpkg (1.14.19) UNRELEASED; urgency=low
   [ Updated dpkg translations ]
   * Galician (Jacobo Tarrio).
   * German (Sven Joachim).
+  * Portuguese (Miguel Figueiredo).
 
   [ Updated manpages translations ]
   * German (Helge Kreutzmann).
