--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-16  Miguel Figueiredo  <elmig@debianpt.org>
+
+	* pt.po: Updated to 951t
+
 2008-04-13  Jacobo Tarrio  <jtarrio@debian.org>
 
 	* gl.po: Really updated to 984t (had 1 fuzzy string).
