Updated Polish translations.

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,12 +18,14 @@ dpkg (1.14.19) UNRELEASED; urgency=low
   [ Updated dpkg translations ]
   * Galician (Jacobo Tarrio).
   * German (Sven Joachim).
+  * Polish (Robert Luberda).
   * Portuguese (Miguel Figueiredo).
 
   [ Updated manpages translations ]
   * German (Helge Kreutzmann).
 
   [ Updated scripts translations ]
+  * Polish (Robert Luberda).
   * Swedish (Peter Karlsson).
 
  -- Jacobo Tarrio <jtarrio@debian.org>  Fri, 11 Apr 2008 22:46:48 +0100
