--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-20 Robert Luberda  <robert@debian.org>
+
+	* pl.po: Updated to 449t6f13u.
+
 2008-04-08  Guillem Jover  <guillem@debian.org>
 
 	* dpkg-dev.pot: Regenerated.
