--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-21  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* po/de.po: Updated to 1580t0f20u.
+
 2008-04-11  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Updated to 1552t0f48u.
