Fix a typo in dpkg-shlibdeps.1 (and unfuzzy translations)

--- a/man/dpkg-shlibdeps.1
+++ b/man/dpkg-shlibdeps.1
@@ -201,7 +201,7 @@ even if they are not yet used by other packages.
 .TP
 .BI \-\-warnings= value
 \fIvalue\fP is a bit field defining the set of warnings that
-can be emitted by \fBdpkg-\-shlibdeps\fP.
+can be emitted by \fBdpkg\-shlibdeps\fP.
 Bit 0 (value=1) enables the warning "symbol \fIsym\fP used by \fIbinary\fP
 found in none of the libraries", bit 1 (value=2) enables the warning
 "dependency on \fIlibrary\fP could be avoided" and bit 2 (value=4)
