--- a/man/po/pl.po
+++ b/man/po/pl.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.14.17\n"
 "POT-Creation-Date: 2008-04-09 07:13+0300\n"
-"PO-Revision-Date: 2008-03-09 16:38+0100\n"
+"PO-Revision-Date: 2008-04-21 19:30+0200\n"
 "Last-Translator: Robert Luberda <robert@debian.org>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -8775,7 +8775,7 @@ msgstr "B<-V>I<nazwa>B<=>I<wartość>"
 #: ../../man/dpkg-shlibdeps.1:212
 msgid ""
 "I<value> is a bit field defining the set of warnings that can be emitted by "
-"B<dpkg--shlibdeps>.  Bit 0 (value=1) enables the warning \"symbol I<sym> "
+"B<dpkg-shlibdeps>.  Bit 0 (value=1) enables the warning \"symbol I<sym> "
 "used by I<binary> found in none of the libraries\", bit 1 (value=2) enables "
 "the warning \"dependency on I<library> could be avoided\" and bit 2 "
 "(value=4)  enables the warning \"I<binary> shouldn't be linked with "
