--- a/man/po/pt_BR.po
+++ b/man/po/pt_BR.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2008-04-09 07:13+0300\n"
-"PO-Revision-Date: 2005-07-03 15:04+0200\n"
+"PO-Revision-Date: 2008-04-21 19:30+0200\n"
 "Last-Translator: Unknown translator\n"
 "Language-Team: Portuguese <debian-l10n-portuguese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -7667,7 +7667,7 @@ msgstr ""
 #: ../../man/dpkg-shlibdeps.1:212
 msgid ""
 "I<value> is a bit field defining the set of warnings that can be emitted by "
-"B<dpkg--shlibdeps>.  Bit 0 (value=1) enables the warning \"symbol I<sym> "
+"B<dpkg-shlibdeps>.  Bit 0 (value=1) enables the warning \"symbol I<sym> "
 "used by I<binary> found in none of the libraries\", bit 1 (value=2) enables "
 "the warning \"dependency on I<library> could be avoided\" and bit 2 "
 "(value=4)  enables the warning \"I<binary> shouldn't be linked with "
