--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-04-09 07:13+0300\n"
-"PO-Revision-Date: 2008-04-08 06:39+0300\n"
+"PO-Revision-Date: 2008-04-21 19:31+0200\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -8684,7 +8684,7 @@ msgstr "B<--warnings=>I<värde>"
 #: ../../man/dpkg-shlibdeps.1:212
 msgid ""
 "I<value> is a bit field defining the set of warnings that can be emitted by "
-"B<dpkg--shlibdeps>.  Bit 0 (value=1) enables the warning \"symbol I<sym> "
+"B<dpkg-shlibdeps>.  Bit 0 (value=1) enables the warning \"symbol I<sym> "
 "used by I<binary> found in none of the libraries\", bit 1 (value=2) enables "
 "the warning \"dependency on I<library> could be avoided\" and bit 2 "
 "(value=4)  enables the warning \"I<binary> shouldn't be linked with "
@@ -8692,7 +8692,7 @@ msgid ""
 "by default, the last one is not. Set I<value> to 7 if you want all warnings "
 "to be active."
 msgstr ""
-"I<Värde> är ett bitfält som anger de varningar som kan ges av B<dpkg--"
+"I<Värde> är ett bitfält som anger de varningar som kan ges av B<dpkg-"
 "shlibdeps>. Bit 0 (värde=1) aktiverar varningen \"symbolen I<sym>, som "
 "används av I<binär>, hittades inte i något av biblioteken\", bit 1 (värde=2) "
 "aktiverar varningen \"beroendet på I<bibliotekt> kunde undvikas\" och bit 2 "
