--- a/man/po/hu.po
+++ b/man/po/hu.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2008-04-09 07:13+0300\n"
-"PO-Revision-Date: 2006-10-05 21:27+0100\n"
+"PO-Revision-Date: 2008-04-21 19:30+0200\n"
 "Last-Translator: SZERVÁC Attila <sas@321.hu>\n"
 "Language-Team: Hungarian\n"
 "MIME-Version: 1.0\n"
@@ -7514,7 +7514,7 @@ msgstr ""
 #: ../../man/dpkg-shlibdeps.1:212
 msgid ""
 "I<value> is a bit field defining the set of warnings that can be emitted by "
-"B<dpkg--shlibdeps>.  Bit 0 (value=1) enables the warning \"symbol I<sym> "
+"B<dpkg-shlibdeps>.  Bit 0 (value=1) enables the warning \"symbol I<sym> "
 "used by I<binary> found in none of the libraries\", bit 1 (value=2) enables "
 "the warning \"dependency on I<library> could be avoided\" and bit 2 "
 "(value=4)  enables the warning \"I<binary> shouldn't be linked with "
