Clarify dpkg-source man page as agreed to on debian-dpkg

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,9 @@ dpkg (1.14.19) UNRELEASED; urgency=low
   * Fix dpkg-genchanges to detect udeb based on Package-Type control
     header instead of file extension analysis on uploaded files.
     Closes: #476113
+  
+  [ Helge Kreutzmann ]
+  * Minor fixes and clarifications to man pages.
 
   [ Updated dpkg translations ]
   * Galician (Jacobo Tarrio).
