--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,5 +1,10 @@
 2008-04-21  Helge Kreutzmann  <debian@helgefjell.de>
 
+	* dpkg-shlibdeps.1: Fix a typo
+	* dpkg-source.1: Improve a sentence (with agreement from Raphäel)
+
+2008-04-21  Helge Kreutzmann  <debian@helgefjell.de>
+
 	* po/de.po: Updated to 1580t0f20u.
 
 2008-04-11  Helge Kreutzmann  <debian@helgefjell.de>
