Update German man page translation after explanations from Raphael Hertzog

--- a/man/po/de.po
+++ b/man/po/de.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2008-04-09 07:13+0300\n"
-"PO-Revision-Date: 2008-04-21 19:29+0200\n"
+"PO-Revision-Date: 2008-04-22 20:50+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -10953,9 +10953,9 @@ msgid ""
 "by system administrators (but note that the triggers won't actually be run "
 "by dpkg-trigger)."
 msgstr ""
-"Dies kann von Betreuerskripten in komplexen und bedingten Situationen "
+"Dies kann von Betreuerskripten in komplexen und if-then-else-Situationen "
 "verwandt werden, wo die Datei-Trigger oder die Steuerung von Dateidirektiven "
-"durch erklärende B<activate>-Trigger nicht ausreichen. Es kann auch zum "
+"durch explizite B<activate>-Trigger nicht ausreichen. Es kann auch zum "
 "Testen und von Systemadministratoren verwandt werden (beachten Sie aber, dass "
 "Trigger nicht tatsächlich durch dpkg-trigger ausgeführt werden)."
 
@@ -11791,7 +11791,7 @@ msgid ""
 "pressing the B<'v'> key, the package status display is toggled between "
 "verbose and shorthand.  Shorthand display is the default."
 msgstr ""
-"Für jedes Paket zeigt die Liste den Paketsatus, die Priorität, den Breich, "
+"Für jedes Paket zeigt die Liste den Paketsatus, die Priorität, den Bereich, "
 "installierte und verfügbare Versionen, den Paketnamen und seine "
 "Kurzbeschreibung, alles in einer Zeile. Durch Drücken der Taste B<»V«> kann "
 "die Anzeige der installierten und verfügbaren Version zwischen ein und aus "
@@ -11807,6 +11807,11 @@ msgid ""
 "the current selection state.  The first two relate to the actual state of "
 "the package, the second pair are about the selections set by the user."
 msgstr ""
+"Die Kurzstatusangabe besteht aus vier Teilen: einer Fehlermarkierung, die "
+"normalerweise leer sein sollte, dem aktuellen Status, dem letzten "
+"Auswahlstatus und dem aktuellen Auswahlstatus. Die ersten zwei beziehen sich "
+"auf den derzeitigen Status des Pakets, das zweite Paar behandeln die vom "
+"Benutzer gesetzte Auswahl."
 
 # type: Plain text
 #: ../../man/dselect.1:304
